# external_app_sync

./: .gitignore  Cargo.toml  README.md  generate_icons.py
src/: launch_agent.rs  lib.rs
tests/: README.md  integration_test.rs
tests/common/: env.rs  mod.rs
